Carousel CSS, Newsletter form CSS + JS, Desktop ver fin.

--- a/.README.md
+++ b/.README.md
@@ -1,6 +1,2 @@
 # Project 1
-This is a thoughtful write-up about my project...
-
-## This is a H2
-
-'this is code block'
+A web homepage for "Aloha Apparel Co." using HTML, CSS, and JS.
